@@ -16,6 +16,7 @@ rule fastqc_quality_control_raw_data:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -39,6 +40,7 @@ rule multiqc_quality_control_raw_data:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output.folder} --filename {output.file} {input} > {log} 2>&1;
@@ -62,6 +64,7 @@ rule fastqc_quality_control_trimmedData:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -84,6 +87,7 @@ rule multiqc_quality_control_trimmedData:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output} {input} 2> {log};
@@ -105,6 +109,7 @@ rule fastqc_quality_control_concatenatedData:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     params:
         outfolder="%s/QC/CONCATENATED/" % (config["project-folder"])
     singularity: config["singularity"]["fastqc"]    
@@ -130,6 +135,7 @@ rule multiqc_quality_control_concatenatedData:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output} {input} 2> {log};
@@ -155,6 +161,7 @@ rule fastqc_quality_control_tRNA:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -181,6 +188,7 @@ rule multiqc_quality_control_tRNA:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output.unmapped} {input.unmapped} 2> {log};
@@ -207,6 +215,7 @@ rule fastqc_quality_control_PhiX:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -233,6 +242,7 @@ rule multiqc_quality_control_PhiX:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output.unmapped} {input.unmapped} 2> {log};
@@ -259,6 +269,7 @@ rule fastqc_quality_control_Mature:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -285,6 +296,7 @@ rule multiqc_quality_control_Mature:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output.unmapped} {input.unmapped} 2> {log};
@@ -311,6 +323,7 @@ rule fastqc_quality_control_Hairpin:
     resources:
         time=cluster["fastqc"]["time"],
         mem=cluster["fastqc"]["mem-per-cpu"]
+    group: "fastqc"   
     singularity: config["singularity"]["fastqc"]
     shell:"""
         mkdir -p {params.outfolder};
@@ -337,6 +350,7 @@ rule multiqc_quality_control_Hairpin:
     resources:
         time=cluster["multiqc"]["time"],
         mem=cluster["multiqc"]["mem-per-cpu"]
+    group: "multiqc"
     singularity: config["singularity"]["multiqc"]
     shell:"""
         multiqc -f -o {output.unmapped} {input.unmapped} 2> {log};
