@@ -25,7 +25,7 @@ rule bowtie_map_concatenated_reads_tRNA:
         "%s/logs/BOWTIE/bowtie_map_tRNA.{samples}.log" % (config["project-folder"])
     benchmark:
         "%s/benchmark/BOWTIE/bowtie_map_tRNA.{samples}.benchmark.tsv" % (config["project-folder"])
-    group: "bowtie_map_concatenated_reads_tRNA"
+    group: "bowtie_decontamination"
     threads: cluster["bowtie_map_concatenated_reads_tRNA"]["cpus-per-task"]
     resources:
         time=cluster["bowtie_map_concatenated_reads_tRNA"]["time"],
@@ -60,7 +60,7 @@ rule samtools_concatenated_reads_tRNA_flagstats:
         sorted="%s/BAM/BOWTIE/tRNA/{samples}_tRNA.sorted.bam" % (config["project-folder"]),
         index="%s/BAM/BOWTIE/tRNA/{samples}_tRNA.sorted.bam.bai" % (config["project-folder"]),
         idxstats="%s/STATS/BOWTIE/tRNA/{samples}_tRNA.idxstats" % (config["project-folder"])
-    group: "bowtie_map_concatenated_reads_tRNA"
+    group: "bowtie_decontamination"
     threads: cluster["__default__"]["cpus-per-task"]
     resources:
         time=cluster["__default__"]["time"],
@@ -102,7 +102,7 @@ rule bowtie_map_nonTRNA_reads_phix:
         "%s/logs/BOWTIE/bowtie_map_PhiX.{samples}.log" % (config["project-folder"])
     benchmark:
         "%s/benchmark/BOWTIE/bowtie_map_PhiX.{samples}.benchmark.tsv" % (config["project-folder"])
-    group: "bowtie_map_nonTRNA_reads_phix"
+    group: "bowtie_decontamination"
     threads: cluster["bowtie_map_nonTRNA_reads_phix"]["cpus-per-task"]
     resources:
         time=cluster["bowtie_map_nonTRNA_reads_phix"]["time"],
@@ -135,7 +135,7 @@ rule samtools_nonTRNA_reads_phix_flagstats:
     output:
         flagstat="%s/STATS/BOWTIE/PhiX/{samples}_PhiX.flagstat" % (config["project-folder"]),
         stats="%s/STATS/BOWTIE/PhiX/{samples}_PhiX.stats" % (config["project-folder"])
-    group: "bowtie_map_nonTRNA_reads_phix"
+    group: "bowtie_decontamination"
     threads: cluster["__default__"]["cpus-per-task"]
     resources:
         time=cluster["__default__"]["time"],
